--- a/cell00/ex03/piscineweb.html
+++ b/cell00/ex03/piscineweb.html
@@ -3,13 +3,19 @@
 <head>
     <title>Piscine Web</title>
 </head>
-
 <body>
+
     <h1 style="text-align: center;">Piscine Web</h1>
 
     <div style="text-align: center;">
-        <img src="im1.jpg" width="300" alt="Image 1">
-        <img src="im2.jpg" width="300" alt="Image 2">
+
+        <a href="https://www.youtube.com/watch?v=INscMGmhmX4" target="_blank">
+            <img src="im1.jpg" width="300">
+        </a>
+
+        <img src="im2.jpg" width="300">
+
     </div>
+
 </body>
 </html>
