--- a/rush/nboonmoo.html
+++ b/rush/nboonmoo.html
@@ -37,11 +37,11 @@
   </style>
 </head>
 
-<body>
+<body id="top">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Nattapat Portfolio</a>
+      <a class="navbar-brand fw-bold" href="#top">Nattapat Portfolio</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
         aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,6 +50,7 @@
 
       <div id="mainNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#showcase">Projects</a></li>
@@ -274,7 +275,7 @@
             href="rtrachoo.html">Page 1</a></li>
         <li class="breadcrumb-item active" aria-current="page"><a
             class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-            href="teammate.html">Page 2</a></li>
+            href="nboonmoo.html">Page 2</a></li>
       </ol>
     </nav>
   </div>
@@ -285,6 +286,7 @@
   </footer>
 
   <!-- Bootstrap JS -->
+   <script src="scholl.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
