--- a/rush/rtrachoo.html
+++ b/rush/rtrachoo.html
@@ -40,11 +40,11 @@
   </style>
 </head>
 
-<body>
+<body id="top">
   <!-- Navbar (fixed) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
     <div class="container">
-      <a class="navbar-brand font-monospace fw-bold" href="index.html">Ratchanon Portfolio</a>
+      <a class="navbar-brand font-monospace fw-bold" href="#top">Ratchanon Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
         aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,6 +52,7 @@
 
       <div id="mainNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#showcase">Project</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skill</a></li>
@@ -237,7 +238,7 @@ Analytics</p>
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item active" aria-current="page"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="rtrachoo.html">Page 1</a></li>
-        <li class="breadcrumb-item" ><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="teammate.html">Page 2</a></li>
+        <li class="breadcrumb-item" ><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="nboonmoo.html">Page 2</a></li>
       </ol>
     </nav>
   </div>
@@ -247,6 +248,7 @@ Analytics</p>
   </footer>
 
   <!-- Bootstrap JS Bundle -->
+   <script src="scholl.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
