--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -1,57 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile Card</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css">
+    <link rel="stylesheet" href="card.css">
 </head>
+
 <body>
-
-    <h1>User Profile Card</h1>
-
-    <div class="card">
-        <table>
-            <tr>
-                <td>
-                    <img class="profile-pic" src="dog.jpg" alt="profile">
-                </td>
-            </tr>
-
-            <tr>
-                <td class="name">
-                    Wil 42
-                </td>
-            </tr>
-
-            <tr>
-                <td class="desc">
-                    Level 25, The answer
-                </td>
-            </tr>
-
-            <tr>
-                <td class="login">
-                    42Paris
-                </td>
-            </tr>
-
-            <tr>
-                <td class="social">
-                    <a href="#"><img src="web.png" alt="web"></a>
-                    <a href="#"><img src="twitter.png" alt="twitter"></a>
-                    <a href="#"><img src="linkedin.png" alt="linkedin"></a>
-                    <a href="#"><img src="facebook.png" alt="facebook"></a>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <a class="btn" href="#">Contact</a>
-                </td>
-            </tr>
-        </table>
+    <div class="container">
+        <div class="card">
+            <div class="">
+                <h1>User Profile Card</h1>
+            </div>
+            <div class="cardcontainer">
+                <div class="cardimage">
+                    <img src="img1.jpeg">
+                </div>
+                <div class="cardcontent">
+                    <h2>Nattapat</h2>
+                    <p>Level 25, The answer</p>
+                    <h4>42Paris</h5>
+                    <div>
+                        <i class="fi fi-brands-twitter"></i>
+                        <i class="fi fi-brands-apple"></i>
+                        <i class="fi fi-brands-instagram"></i>
+                        <i class="fi fi-brands-youtube"></i>
+                    </div>
+                    <div class="contact">
+                        <p>Contact</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
 </body>
+
 </html>
